--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -253,3 +253,11 @@ body {
 .emoji-picker [data-emoji]:hover {
     @apply hover:bg-darbVioletBtnOutline active:bg-violetLighter bg-violetDarker border-none hover:cursor-pointer;
 }
+
+.scroll-grab::-webkit-scrollbar-thumb {
+    cursor: grab;
+}
+
+.scroll-grab::-webkit-scrollbar-thumb:active {
+    cursor: grabbing;
+}
